[DEX] Make dex a part of ARSCLib and begin integration with resources