@@ -15,18 +15,17 @@
  */
 package com.reandroid.dex.model;
 
-import com.reandroid.arsc.base.Block;
+import com.reandroid.archive.ZipEntryMap;
 import com.reandroid.arsc.chunk.PackageBlock;
 import com.reandroid.arsc.chunk.TableBlock;
-import com.reandroid.arsc.item.IntegerReference;
-import com.reandroid.arsc.item.IntegerVisitor;
-import com.reandroid.arsc.item.VisitableInteger;
+import com.reandroid.dex.common.FullRefresh;
+import com.reandroid.dex.common.SectionItem;
+import com.reandroid.dex.id.*;
+import com.reandroid.dex.sections.Marker;
+import com.reandroid.dex.sections.MergeOptions;
+import com.reandroid.dex.smali.SmaliWriter;
 import com.reandroid.utils.collection.ArrayCollection;
 import com.reandroid.dex.common.DexUtils;
-import com.reandroid.dex.id.ClassId;
-import com.reandroid.dex.id.FieldId;
-import com.reandroid.dex.id.MethodId;
-import com.reandroid.dex.id.StringId;
 import com.reandroid.dex.ins.*;
 import com.reandroid.dex.data.*;
 import com.reandroid.dex.key.*;
@@ -42,17 +41,18 @@ import org.xmlpull.v1.XmlSerializer;
 
 import java.io.File;
 import java.io.IOException;
-import java.io.InputStream;
 import java.util.*;
+import java.util.function.Predicate;
 
-public class DexDirectory implements Iterable<DexFile>, VisitableInteger, IntegerVisitor {
-    private final List<DexFile> dexFileList;
+public class DexDirectory implements Iterable<DexFile>, DexClassRepository, FullRefresh {
+
+    private final DexFileSourceSet dexSourceSet;
     private Object mTag;
 
     private final Set<RClassParent> mRParents;
 
     public DexDirectory() {
-        this.dexFileList = new ArrayCollection<>();
+        this.dexSourceSet = new DexFileSourceSet();
         this.mRParents = new HashSet<>();
     }
 
@@ -63,37 +63,139 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
         this.mTag = tag;
     }
 
+    public int getVersion(){
+        DexFile first = getFirst();
+        if(first != null){
+            return first.getVersion();
+        }
+        return 0;
+    }
+    public void setVersion(int version){
+        for(DexFile dexFile : this){
+            dexFile.setVersion(version);
+        }
+    }
+    public void clearMarkers(){
+        for(DexFile dexFile : this){
+            dexFile.clearMarkers();
+        }
+    }
+    public List<Marker> getMarkers() {
+        ArrayCollection<Marker> results = new ArrayCollection<>();
+        for(DexFile dexFile : this){
+            results.addAll(dexFile.getMarkers());
+        }
+        return results;
+    }
+    public void setClassSourceFileAll(){
+        setClassSourceFileAll(SourceFile.SourceFile);
+    }
+    public void setClassSourceFileAll(String sourceFile){
+        Iterator<DexFile> iterator = iterator();
+        while (iterator.hasNext()){
+            DexFile dexFile = iterator.next();
+            dexFile.setClassSourceFileAll(sourceFile);
+        }
+    }
+    public int mergeAll(MergeOptions options, Iterable<DexClass> iterable){
+        return mergeAll(options, iterable.iterator());
+    }
+    public int mergeAll(MergeOptions options, Iterator<DexClass> iterator){
+        int result = 0;
+        while (iterator.hasNext()){
+            boolean merged = merge(options, iterator.next());
+            if(merged){
+                result ++;
+            }
+        }
+        return result;
+    }
+    public boolean merge(DexClass dexClass){
+        return merge(new DexMergeOptions(true), dexClass);
+    }
+    public boolean merge(MergeOptions options, DexClass dexClass){
+        if(dexClass.isInSameDirectory(this)){
+            return false;
+        }
+        if(containsClass(dexClass.getKey())){
+            options.onDuplicate(dexClass.getId());
+            return false;
+        }
+        for(DexFile dexFile : this){
+            if(dexFile.merge(options, dexClass)){
+                return true;
+            }
+        }
+        return false;
+    }
+    public void merge(DexDirectory directory){
+        merge(new DexMergeOptions(false), directory);
+    }
+    public void merge(MergeOptions options, DexDirectory directory){
+        if(directory == this){
+            throw new IllegalArgumentException("Cyclic merge");
+        }
+        int i = 0;
+        while (true){
+            DexFile dexFile = this.get(i);
+            DexFile last = directory.getLastNonEmpty(options,0);
+            if(dexFile == null || last == null){
+                break;
+            }
+            if(!dexFile.merge(options, last)){
+                i ++;
+            }
+        }
+        for(DexFile dexFile : this){
+            dexFile.refresh();
+            dexFile.shrink();
+        }
+        directory.merge(options);
+        getDexSourceSet().merge(directory.getDexSourceSet());
+    }
     public void merge(){
+        merge(new DexMergeOptions(true));
+    }
+    public void merge(MergeOptions options){
         if(size() < 2){
             return;
         }
         int i = 0;
         while (true){
             DexFile dexFile = get(i);
-            DexFile last = getLastNonEmpty(i);
+            DexFile last = getLastNonEmpty(options,i + 1);
             if(dexFile == null || last == null){
                 break;
             }
-            log("Merging from: " + last.getSimpleName() + ", to " + dexFile.getSimpleName());
-            if(!dexFile.merge(last)){
+            if(!dexFile.merge(options, last)){
                 i ++;
             }
         }
         for(DexFile dexFile : this){
-            log("Clear duplicate data from: " + dexFile.getSimpleName());
             dexFile.refresh();
             dexFile.clearDuplicateData();
+            dexFile.clearUnused();
         }
     }
-    private DexFile getLastNonEmpty(int limit){
+    private DexFile getLastNonEmpty(MergeOptions options, int limit){
         int size = size() - 1;
-        for(int i = size; i > limit; i--){
+        for(int i = size; i >= limit; i--){
             DexFile dexFile = get(i);
-            if(!dexFile.isEmpty()){
+            if(!options.isEmptyDexFile(dexFile.getDexLayout())){
                 return dexFile;
             }
         }
         return null;
+    }
+    public void shrink(){
+        for(DexFile dexFile : this){
+            dexFile.shrink();
+        }
+    }
+    public void clearDuplicateData(){
+        for(DexFile dexFile : this){
+            dexFile.clearDuplicateData();
+        }
     }
     public void clearDebug(){
         for(DexFile dexFile : this){
@@ -103,11 +205,16 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
 
     public void cleanDuplicateDebugLines(){
         for(DexFile dexFile : this){
-            dexFile.cleanDuplicateDebugLines();
+            dexFile.fixDebugLineNumbers();
+        }
+    }
+    public void clearUnused(){
+        for(DexFile dexFile : this){
+            dexFile.clearUnused();
         }
     }
     public Iterator<FieldKey> findEquivalentFields(FieldKey fieldKey){
-        DexClass defining = getDexClass(fieldKey.getDefiningKey());
+        DexClass defining = getDexClass(fieldKey.getDeclaring());
         if(defining == null){
             return EmptyIterator.of();
         }
@@ -132,7 +239,7 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
         return CombiningIterator.two(SingleIterator.of(definingKey), subKeys);
     }
     public Iterator<MethodKey> findEquivalentMethods(MethodKey methodKey){
-        DexClass defining = getDexClass(methodKey.getDefiningKey());
+        DexClass defining = getDexClass(methodKey.getDeclaring());
         if(defining == null){
             return EmptyIterator.of();
         }
@@ -151,7 +258,7 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
         return new IterableIterator<DexFile, DexClass>(iterator()) {
             @Override
             public Iterator<DexClass> iterator(DexFile element) {
-                return element.getSubTypeClasses(typeKey);
+                return element.getSubTypes(typeKey);
             }
         };
     }
@@ -162,19 +269,6 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
                 return element.getImplementClasses(typeKey);
             }
         };
-    }
-    public void loadSuperTypesMap(){
-        for(DexFile dexFile : this){
-            dexFile.loadSuperTypesMap();
-        }
-    }
-    @Override
-    public void visit(Object sender, IntegerReference reference) {
-        if((reference instanceof InsConst) || (reference instanceof InsConst16High)){
-            replaceR((SizeXIns) reference);
-        }else if(sender instanceof InsArrayData){
-            replaceR((InsArrayData) sender);
-        }
     }
     private void replaceRIns(Ins ins) {
         if(ins instanceof SizeXIns){
@@ -194,7 +288,7 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
             return;
         }
         mRCount ++;
-        log(mRCount + ") " + HexUtil.toHex8(rField.getResourceId()) + " --> " + rField.getFieldKey());
+        log(mRCount + ") " + HexUtil.toHex8(rField.getResourceId()) + " --> " + rField.getKey());
     }
 
     int mRArrayCount;
@@ -243,7 +337,7 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
 
                 Ins21c insSget = (Ins21c) insArray[0];
                 insSget.setRegister(0, reg1);
-                insSget.setSectionItem(rField.getFieldKey());
+                insSget.setSectionIdKey(rField.getKey());
 
                 InsConst insConst = (InsConst) insArray[1];
                 insConst.setRegister(0, reg2);
@@ -261,7 +355,7 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
                 mRArrayCount ++;
 
                 System.err.println(mRArrayCount + ") "
-                        + ": [" + i + "] " + HexUtil.toHex8(resourceId) + " --> " + rField.getFieldKey());
+                        + ": [" + i + "] " + HexUtil.toHex8(resourceId) + " --> " + rField.getKey());
 
             }
             instructionList.remove(fillArrayData);
@@ -322,18 +416,18 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
     }
     private void replaceObfRInvoke(Ins ins){
         Ins21c ins21c = (Ins21c) ins;
-        FieldKey fieldKey = (FieldKey) ins21c.getSectionItemKey();
+        FieldKey fieldKey = (FieldKey) ins21c.getSectionIdKey();
         FieldDef fieldDef = mObfFields.get(fieldKey);
         IntValue intValue = (IntValue) fieldDef.getStaticInitialValue();
         RField rField = getRField(intValue.get());
-        ins21c.setSectionItem(rField.getFieldKey());
+        ins21c.setSectionIdKey(rField.getKey());
     }
     boolean isObfRInvoke(Ins ins) {
         if(ins.getOpcode() != Opcode.SGET){
             return false;
         }
         Ins21c ins21c = (Ins21c) ins;
-        FieldKey key = (FieldKey) ins21c.getSectionItemKey();
+        FieldKey key = (FieldKey) ins21c.getSectionIdKey();
         return mObfFields.containsKey(key);
     }
     private void mapObfRFields(){
@@ -379,7 +473,7 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
         if(!fieldDef.isStatic() || !fieldDef.isFinal()){
             return false;
         }
-        if(!"I".equals(fieldDef.getKey().getType())){
+        if(!"I".equals(fieldDef.getKey().getTypeName())){
             return false;
         }
         DexValueBlock<?> valueBlock = fieldDef.getStaticInitialValue();
@@ -430,7 +524,7 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
         return null;
     }
     public void loadRClass(TableBlock tableBlock){
-        DexFile dexFile = getMain();
+        DexFile dexFile = getFirst();
         if(dexFile == null){
             return;
         }
@@ -440,42 +534,8 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
             mRParents.add(rClassParent);
         }
     }
-    private DexFile getMain(){
-        if(dexFileList.size() != 0){
-            return dexFileList.get(0);
-        }
-        return null;
-    }
-    @Override
-    public void visitIntegers(IntegerVisitor visitor) {
-        for(DexFile dexFile : this){
-            dexFile.visitIntegers(visitor);
-            save(dexFile);
-        }
-    }
-    public void save(){
-        for(DexFile dexFile : this){
-            save(dexFile);
-        }
-    }
-    private void save(DexFile dexFile){
-        Object tag = dexFile.getTag();
-        if(!(tag instanceof File)){
-            return;
-        }
-        File file = (File) tag;
-        String name = file.getName();
-        File dir = new File(file.getParentFile(), "dex");
-        File modFile = new File(dir, name);
-        System.err.println("Saving: " + name);
-        try {
-            dexFile.sortStrings();
-            dexFile.refreshFull();
-            dexFile.write(modFile);
-            System.err.println("Saved: " + modFile);
-        } catch (IOException exception) {
-            exception.printStackTrace();
-        }
+    public void save(File dir) throws IOException {
+        dexSourceSet.saveAll(dir);
     }
     public List<RField> listRFields() {
         List<RField> fieldList = CollectionUtil.toUniqueList(getRFields());
@@ -489,28 +549,20 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
     public Iterator<ClassId> getClassIds() {
         return getItems(SectionType.CLASS_ID);
     }
-    public <T1 extends Block> T1 get(SectionType<T1> sectionType, Key key){
+    public <T1 extends SectionItem> T1 get(SectionType<T1> sectionType, Key key){
         for (DexFile dexFile : this) {
-            T1 item = dexFile.get(sectionType, key);
+            T1 item = dexFile.getItem(sectionType, key);
             if (item != null) {
                 return item;
             }
         }
         return null;
     }
-    public <T1 extends Block> Iterator<T1> getAll(SectionType<T1> sectionType, Key key){
+    public <T1 extends SectionItem> Iterator<T1> getAll(SectionType<T1> sectionType, Key key){
         return new IterableIterator<DexFile, T1>(iterator()) {
             @Override
             public Iterator<T1> iterator(DexFile element) {
-                return element.getAll(sectionType, key);
-            }
-        };
-    }
-    public<T1 extends Block> Iterator<T1> getItems(SectionType<T1> sectionType) {
-        return new IterableIterator<DexFile, T1>(iterator()) {
-            @Override
-            public Iterator<T1> iterator(DexFile element) {
-                return element.getItems(sectionType);
+                return element.getItems(sectionType, key);
             }
         };
     }
@@ -518,18 +570,87 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
         return new MergingIterator<>(ComputeIterator.of(iterator(),
                 DexFile::getRClasses));
     }
-    public DexClass get(String name) {
-        for(DexFile dexFile : this) {
-            DexClass dexClass = dexFile.get(name);
-            if(dexClass != null){
-                return dexClass;
+    public boolean removeDexClass(TypeKey typeKey){
+        for(DexFile dexFile : this){
+            if(dexFile.removeDexClass(typeKey)){
+                return true;
+            }
+        }
+        return false;
+    }
+    public Iterator<Key> removeDexClasses(Predicate<? super Key> filter){
+        return new IterableIterator<DexFile, Key>(iterator()) {
+            @Override
+            public Iterator<Key> iterator(DexFile element) {
+                return element.removeDexClasses(filter);
+            }
+        };
+    }
+    public<T1 extends SectionItem> Iterator<T1> getClonedItems(SectionType<T1> sectionType) {
+        return new IterableIterator<DexFile, T1>(clonedIterator()) {
+            @Override
+            public Iterator<T1> iterator(DexFile element) {
+                return element.getClonedItems(sectionType);
+            }
+        };
+    }
+    @Override
+    public int getDexClassesCount() {
+        int result = 0;
+        for(DexFile dexFile : this){
+            result += dexFile.getDexClassesCount();
+        }
+        return result;
+    }
+    public DexClass getDexClass(String name) {
+        return getDexClass(TypeKey.create(name));
+    }
+    @Override
+    public DexClass getDexClass(TypeKey key){
+        for(DexFile dexFile : this){
+            DexClass result = dexFile.getDexClass(key);
+            if(result != null){
+                return result;
             }
         }
         return null;
     }
-    public Iterator<DexClass> getDexClasses() {
-        return new MergingIterator<>(ComputeIterator.of(iterator(),
-                DexFile::getDexClasses));
+    @Override
+    public Iterator<DexClass> getDexClasses(Predicate<? super TypeKey> filter) {
+        return new IterableIterator<DexFile, DexClass>(iterator()) {
+            @Override
+            public Iterator<DexClass> iterator(DexFile dexFile) {
+                return dexFile.getDexClasses(filter);
+            }
+        };
+    }
+    @Override
+    public<T1 extends SectionItem> Iterator<T1> getItems(SectionType<T1> sectionType) {
+        return new IterableIterator<DexFile, T1>(iterator()) {
+            @Override
+            public Iterator<T1> iterator(DexFile element) {
+                return element.getItems(sectionType);
+            }
+        };
+    }
+    @Override
+    public <T1 extends SectionItem> Iterator<T1> getItems(SectionType<T1> sectionType, Key key){
+        return new IterableIterator<DexFile, T1>(iterator()) {
+            @Override
+            public Iterator<T1> iterator(DexFile dexFile) {
+                return dexFile.getItems(sectionType, key);
+            }
+        };
+    }
+    @Override
+    public <T1 extends SectionItem> T1 getItem(SectionType<T1> sectionType, Key key){
+        for(DexFile dexFile : this){
+            T1 item = dexFile.getItem(sectionType, key);
+            if(item != null){
+                return item;
+            }
+        }
+        return null;
     }
     public Iterator<Ins> getInstructions() {
         return new IterableIterator<DexFile, Ins>(iterator()) {
@@ -541,7 +662,10 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
     }
     @Override
     public Iterator<DexFile> iterator() {
-        return getDexFileList().iterator();
+        return dexSourceSet.getDexFiles();
+    }
+    public Iterator<DexFile> clonedIterator() {
+        return dexSourceSet.getClonedDexFiles();
     }
 
     public void clearPools(){
@@ -554,61 +678,70 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
             dexFile.sortStrings();
         }
     }
+    @Override
     public void refreshFull(){
         for(DexFile dexFile : this){
+            dexFile.setDexDirectory(this);
             dexFile.refreshFull();
         }
     }
     public void refresh(){
         for(DexFile dexFile : this){
+            dexFile.setDexDirectory(this);
             dexFile.refresh();
         }
     }
+    public void updateDexFileList(){
+        for(DexFile dexFile : this){
+            dexFile.setDexDirectory(this);
+        }
+    }
     public void addDirectory(File dir) throws IOException {
-        File[] files = dir.listFiles();
-        if(files == null){
-            return;
-        }
-        for(File file : files){
-            String name = file.getName();
-            if(file.isFile() && name.endsWith(".dex") && !name.contains("_mod")){
-                add(file);
-            }
+        getDexSourceSet().addAll(dir);
+        for(DexFile dexFile : this){
+            dexFile.setDexDirectory(this);
         }
     }
-    public void add(File file) throws IOException {
-        DexFile dexFile = DexFile.read(file);
-        dexFile.setTag(file);
-        dexFile.setSimpleName(file.getName());
-        add(dexFile);
+    public void addApk(ZipEntryMap zipEntryMap) throws IOException {
+        addZip(zipEntryMap, "");
     }
-    public void add(InputStream inputStream) throws IOException {
-        DexFile dexFile = DexFile.read(inputStream);
-        add(dexFile);
-    }
-    public void add(DexFile dexFile){
-        if(dexFile == null || dexFileList.contains(dexFile)){
-            return;
+    public void addZip(ZipEntryMap zipEntryMap, String root) throws IOException {
+        getDexSourceSet().addAll(zipEntryMap, root);
+        for(DexFile dexFile : this){
+            dexFile.setDexDirectory(this);
         }
-        dexFileList.add(dexFile);
+    }
+    public void addFile(File file) throws IOException {
+        getDexSourceSet().add(file);
+    }
+    public DexFile createDefault(){
+        DexSource<DexFile> source = getDexSourceSet().createNext();
+        DexFile dexFile = DexFile.createDefault();
+        source.set(dexFile);
         dexFile.setDexDirectory(this);
-        dexFileList.sort(DexUtils.getDexPathComparator(DexFile::getTag));
+        dexFile.setSimpleName(source.toString());
+        int version = getVersion();
+        if(version != 0){
+            dexFile.setVersion(version);
+        }
+        return dexFile;
     }
+    public DexFileSourceSet getDexSourceSet() {
+        return dexSourceSet;
+    }
+
     public void rename(TypeKey search, TypeKey replace){
         int count = 0;
-        Iterator<StringId> iterator = renameTypes(search, replace, true, true);
+        Iterator<?> iterator = renameTypes(search, replace, true, true);
         while (iterator.hasNext()){
-            StringId stringId = iterator.next();
+            iterator.next();
             count++;
-            System.err.println(count + ") Renamed: " + stringId.getString());
         }
-        System.err.println(count + ") Renamed: " + search + " to " + replace);
         if(count == 0){
             return;
         }
-        clearPools();
-        sortStrings();
-        refreshFull();
+        //sortStrings();
+        //refresh();
     }
 
     public Iterator<StringId> renameTypes(TypeKey search, TypeKey replace){
@@ -618,11 +751,11 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
         return renameTypes(new KeyPair<>(search, replace), renameInner, renameJava);
     }
     public Iterator<StringId> renameTypes(KeyPair<TypeKey, TypeKey> pair, boolean renameInner, boolean renameJava){
-        return FilterIterator.of(getItems(SectionType.STRING_ID),
+        return FilterIterator.of(getClonedItems(SectionType.STRING_ID),
                 stringId -> renameTypes(stringId, pair, renameInner, renameJava));
     }
     public Iterator<StringId> renameTypes(Iterable<KeyPair<TypeKey, TypeKey>> iterable, boolean renameInner, boolean renameJava){
-        return FilterIterator.of(getItems(SectionType.STRING_ID),
+        return FilterIterator.of(getClonedItems(SectionType.STRING_ID),
                 stringId -> renameTypes(stringId, iterable, renameInner, renameJava));
     }
     boolean renameTypes(StringId stringId, Iterable<KeyPair<TypeKey, TypeKey>> iterable, boolean renameInner, boolean renameJava){
@@ -635,13 +768,23 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
         return false;
     }
     boolean renameTypes(StringId stringId, KeyPair<TypeKey, TypeKey> pair, boolean renameInner, boolean renameJava){
+        boolean renamed = renameTypeString(stringId, pair, renameInner, renameJava);
+        if(renamed){
+            DexClass dexClass = getDexClass(stringId.getString());
+            if(dexClass != null){
+                dexClass.fixDalvikInnerClassName();
+            }
+        }
+        return renamed;
+    }
+    private boolean renameTypeString(StringId stringId, KeyPair<TypeKey, TypeKey> pair, boolean renameInner, boolean renameJava){
 
         String text = stringId.getString();
 
         TypeKey search = pair.getFirst();
         TypeKey replace = pair.getSecond();
-        String type = search.getType();
-        String type2 = replace.getType();
+        String type = search.getTypeName();
+        String type2 = replace.getTypeName();
 
         if(type.equals(text)){
             stringId.setString(type2);
@@ -650,7 +793,7 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
         if(renameInner){
             type = type.replace(';', '$');
             if(text.startsWith(type)){
-                type2 = replace.getType();
+                type2 = replace.getTypeName();
                 type2 = type2.replace(';', '$');
                 text = text.substring(type.length());
                 stringId.setString(type2 + text);
@@ -712,16 +855,16 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
             }
         }
         if(renameJava){
-            type = search.toJavaType();
+            type = search.getSourceName();
             if(type.equals(text)){
-                type2 = replace.toJavaType();
+                type2 = replace.getSourceName();
                 stringId.setString(type2);
                 return true;
             }
             if(renameInner){
                 type = type + "$";
                 if(text.startsWith(type)){
-                    type2 = replace.toJavaType();
+                    type2 = replace.getSourceName();
                     type2 = type2 + "$";
                     text = text.substring(type.length());
                     stringId.setString(type2 + text);
@@ -729,7 +872,7 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
                 }
                 type = type + ".";
                 if(text.startsWith(type)){
-                    type2 = replace.toJavaType();
+                    type2 = replace.getSourceName();
                     type2 = type2 + ".";
                     text = text.substring(type.length());
                     stringId.setString(type2 + text);
@@ -754,13 +897,10 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
                 throw new IllegalArgumentException("Duplicate: " + renamed);
             }
         }
-        List<MethodKey> results = new ArrayCollection<>(methodIdList.size());
         for(MethodId methodId : methodIdList){
-            System.err.println(methodIdList.size()+"  RENAMED: " + methodId.getKey());
             methodId.setName(name);
-            results.add(methodId.getKey());
         }
-        return results;
+        return new ComputeList<>(methodIdList, MethodId::getKey);
     }
     public Collection<FieldKey> rename(FieldKey fieldKey, String name){
         ArrayCollection<FieldKey> existingFields = ArrayCollection.of(findEquivalentFields(fieldKey.changeName(name)));
@@ -769,7 +909,7 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
             return EmptyList.of();
         }
         if(!existingFields.isEmpty()){
-            throw new IllegalArgumentException("Conflicting fields: " + existingFields.get(0));
+            throw new IllegalArgumentException("Conflicting fields: " + existingFields.getFirst());
         }
         FieldKey renamed = fieldKey.changeName(name);
         for(FieldId fieldId : fieldIdList){
@@ -777,37 +917,37 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
                 throw new IllegalArgumentException("Duplicate: " + renamed);
             }
         }
-        ArrayCollection<FieldKey> results = new ArrayCollection<>(fieldIdList.size());
         for(FieldId fieldId : fieldIdList){
             fieldId.setName(name);
-            results.add(fieldId.getKey());
         }
-        return results;
+        return new ComputeList<>(fieldIdList, FieldId::getKey);
     }
     public boolean containsDeepSearch(MethodKey methodKey){
-        DexClass startClass = getDexClass(methodKey.getDefiningKey());
+        DexClass startClass = getDexClass(methodKey.getDeclaring());
         if(startClass == null){
             return false;
+        }
+        if(startClass.containsDeclaredMethod(methodKey)){
+            return true;
         }
         Iterator<DexClass> iterator = startClass.getOverridingAndSuperTypes();
         while (iterator.hasNext()){
             DexClass dexClass = iterator.next();
-            MethodKey key = methodKey.changeDefining(dexClass.getClassName());
-            if(methodKey.equals(key, true, false)){
+            if(dexClass.containsDeclaredMethod(methodKey)){
                 return true;
             }
         }
         return false;
     }
     public boolean containsDeepSearch(FieldKey fieldKey){
-        DexClass startClass = getDexClass(fieldKey.getDefiningKey());
+        DexClass startClass = getDexClass(fieldKey.getDeclaring());
         if(startClass == null){
             return false;
         }
         Iterator<DexClass> iterator = startClass.getOverridingAndSuperTypes();
         while (iterator.hasNext()){
             DexClass dexClass = iterator.next();
-            FieldKey key = fieldKey.changeDefining(dexClass.getClassName());
+            FieldKey key = fieldKey.changeDefining(dexClass.getKey());
             if(fieldKey.equals(key)){
                 return true;
             }
@@ -830,13 +970,6 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
             }
         };
     }
-    public DexField getDexField(FieldKey fieldKey){
-        DexClass dexClass = getDexClass(fieldKey.getDefiningKey());
-        if(dexClass != null){
-            return dexClass.getField(fieldKey);
-        }
-        return null;
-    }
     public Iterator<DexClass> searchExtending(TypeKey typeKey){
         return new IterableIterator<DexFile, DexClass>(iterator()) {
             @Override
@@ -853,6 +986,17 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
             }
         };
     }
+    public boolean containsClass(TypeKey key){
+        return contains(SectionType.CLASS_ID, key);
+    }
+    public boolean contains(SectionType<?> sectionType, Key key){
+        for(DexFile dexFile : this){
+            if(dexFile.contains(sectionType, key)){
+                return true;
+            }
+        }
+        return false;
+    }
     public boolean contains(Key key){
         for(DexFile dexFile : this){
             if(dexFile.contains(key)){
@@ -861,27 +1005,48 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
         }
         return false;
     }
-    public DexClass getDexClass(TypeKey key){
+    public DexDeclaration getDef(Key key){
         for(DexFile dexFile : this){
-            DexClass dexClass = dexFile.get(key);
-            if(dexClass != null){
-                return dexClass;
+            DexDeclaration result = dexFile.getDef(key);
+            if(result != null){
+                return result;
+            }
+        }
+        return null;
+    }
+    public DexField getField(FieldKey fieldKey){
+        for(DexFile dexFile : this){
+            DexField result = dexFile.getDeclaredField(fieldKey);
+            if(result != null){
+                return result;
             }
         }
         return null;
     }
     public DexFile get(int i){
-        return dexFileList.get(i);
+        return dexSourceSet.getDexFile(i);
     }
     public int size() {
-        return dexFileList.size();
+        return dexSourceSet.size();
     }
-    public void clear() {
-        dexFileList.clear();
+    public DexFile getFirst(){
+        DexSource<DexFile> source = dexSourceSet.getFirst();
+        if(source != null){
+            return source.get();
+        }
+        return null;
     }
-    public List<DexFile> getDexFileList() {
-        return dexFileList;
+    public DexFile getLast(){
+        DexSource<DexFile> source = dexSourceSet.getLast();
+        if(source != null){
+            return source.get();
+        }
+        return null;
     }
+    public DexSource<DexFile> getLastSource(){
+        return dexSourceSet.getLast();
+    }
+
     public void serializePublicXml(XmlSerializer serializer) throws IOException {
         serializer.startDocument("utf-8", null);
         serializer.text("\n");
@@ -897,5 +1062,41 @@ public class DexDirectory implements Iterable<DexFile>, VisitableInteger, Intege
         serializer.endDocument();
         serializer.flush();
         IOUtil.close(serializer);
+    }
+
+
+    public void writeSmali(SmaliWriter writer, File root) throws IOException {
+        for(DexFile dexFile : this){
+            dexFile.writeSmali(writer, root);
+        }
+    }
+    public static DexDirectory fromZip(ZipEntryMap zipEntryMap) throws IOException {
+        DexDirectory dexDirectory = new DexDirectory();
+        dexDirectory.getDexSourceSet().addAll(zipEntryMap);
+        dexDirectory.updateDexFileList();
+        return dexDirectory;
+    }
+    public static DexDirectory fromZip(ZipEntryMap zipEntryMap, String directoryPath) throws IOException {
+        DexDirectory dexDirectory = new DexDirectory();
+        dexDirectory.getDexSourceSet().addAll(zipEntryMap, directoryPath);
+        dexDirectory.updateDexFileList();
+        return dexDirectory;
+    }
+    public static DexDirectory fromDirectory(File dir) throws IOException {
+        DexDirectory dexDirectory = new DexDirectory();
+        dexDirectory.getDexSourceSet().addAll(dir);
+        dexDirectory.updateDexFileList();
+        return dexDirectory;
+    }
+    public static DexDirectory readStrings(ZipEntryMap zipEntryMap) throws IOException {
+        return readStrings(zipEntryMap, null);
+    }
+    public static DexDirectory readStrings(ZipEntryMap zipEntryMap, String directoryPath) throws IOException {
+        DexDirectory dexDirectory = new DexDirectory();
+        DexFileSourceSet sourceSet = dexDirectory.getDexSourceSet();
+        sourceSet.setReadStringsMode(true);
+        sourceSet.addAll(zipEntryMap, directoryPath);
+        dexDirectory.updateDexFileList();
+        return dexDirectory;
     }
 }
